--- a/index.html
+++ b/index.html
@@ -3,147 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sand Stone Lineup</title>
+<title>Overlay Map</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="light" data-lang="tr">
+<body>
 
-<!-- REKLAM DUVARLARI -->
-<a href="https://www.tiktok.com/@solixx144" target="_blank" class="ad-wall left"></a>
-<a href="https://www.tiktok.com/@solixx144" target="_blank" class="ad-wall right"></a>
+<div id="overlay"></div>
 
-<header>
-  <h1 data-text="siteTitle">Sand Stone Lineup</h1>
-  <div class="lang-select">
-    <select id="langSelect">
-      <option value="tr">Türkçe</option>
-      <option value="en">English</option>
-      <option value="ru">Русский</option>
-    </select>
-  </div>
-  <button id="menuBtn">☰</button>
-</header>
+<div id="map"></div>
 
-<main>
-  <div class="map-container">
-    <img class="map" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGnQmTu2-0yu6rQSVa_4l7w18-6h8tYl3hQRy7deax1w&s=10">
-    <!-- NOKTALAR -->
-    <div class="point flash" data-video="videos/rickroll.mp4" style="left:60%;top:30%"></div>
-    <div class="point molly" data-video="videos/rickroll.mp4" style="left:20%;top:50%"></div>
-    <div class="point smoke" data-video="videos/rickroll.mp4" style="left:50%;top:70%"></div>
-    <div class="point grenade" data-video="videos/rickroll.mp4" style="left:40%;top:20%"></div>
-  </div>
-</main>
-
-<!-- POPUP -->
-<div class="popup" id="popup">
-  <div class="popup-card">
-    <div class="popup-header">
-      <span id="popupTitle">Video</span>
-      <button id="closePopup">×</button>
-    </div>
-    <div id="popupVideo"></div>
-  </div>
+<!-- OYUN HUD MENÜ -->
+<div id="ui">
+  <div class="ui-btn" id="lockBtn">🔒 Kilitle</div>
+  <div class="ui-btn" id="clearBtn">🧹 Temizle</div>
 </div>
 
-<!-- MENU -->
-<div class="menu" id="mapMenu">
-  <h3 data-text="mapsTitle">Haritalar</h3>
-  <button class="mapBtn inactive" data-text="mapDune">Dune – Yakında</button>
-  <button class="mapBtn inactive" data-text="mapRust">Rust – Yakında</button>
-  <button class="mapBtn inactive" data-text="mapZone">Zone 7 – Yakında</button>
-  <hr>
-  <h4 data-text="themesTitle">Nitro Temalar</h4>
-  <div class="theme-buttons">
-    <button class="themeBtn red" data-theme="theme-red">Kırmızı Nitro</button>
-    <button class="themeBtn blue" data-theme="theme-blue">Mavi Nitro</button>
-    <button class="themeBtn green" data-theme="theme-green">Yeşil Nitro</button>
-  </div>
-  <hr>
-  <h4 data-text="filterTitle">Noktalar</h4>
-  <button onclick="filterPoints('flash')" data-text="flash">Flash</button>
-  <button onclick="filterPoints('molly')" data-text="molly">Molly</button>
-  <button onclick="filterPoints('smoke')" data-text="smoke">Smoke</button>
-  <button onclick="filterPoints('grenade')" data-text="grenade">Grenade</button>
-  <button onclick="filterPoints('all')" data-text="allPoints">Hepsi</button>
-  <button class="closeMenu" id="closeMenu" data-text="close">Kapat</button>
-</div>
-
-<!-- TUTORIAL -->
-<div class="tutorial" id="tutorial">
-  <div class="tutorial-card">
-    <h3 data-text="tutorialTitle">Nasıl Kullanılır?</h3>
-    <p id="tutorialText">
-      1. Noktalara tıklayın.<br>
-      2. Video otomatik açılır.<br>
-      3. Popup’u kapatmak için çarpıya tıklayın.<br>
-      4. Menüden temayı ve filtreleri değiştirebilirsiniz.<br>
-      5. Reklam duvarlarına tıklarsanız TikTok hesabına yönlendirilirsiniz.
-    </p>
-    <button id="closeTutorial" data-text="gotIt">Tamam</button>
-  </div>
-</div>
-
-<!-- ALT TEMA SEÇİMİ -->
-<div class="theme-bar">
-  <button id="lightThemeBtn">Beyaz Tema</button>
-  <button id="darkThemeBtn" class="dark">Siyah Tema</button>
-</div>
-
-<script src="app.js"></script>
-</body>
-</html>
-<!-- POPUP -->
-<div class="popup" id="popup">
-  <div class="popup-card">
-    <div class="popup-header">
-      <span id="popupTitle">Video</span>
-      <button id="closePopup">×</button>
-    </div>
-    <div id="popupVideo"></div>
-  </div>
-</div>
-
-<!-- MENÜ -->
-<div class="menu" id="mapMenu">
-  <h3 data-text="mapsTitle">Haritalar</h3>
-  <button class="mapBtn inactive" data-text="mapDune">Dune – Yakında</button>
-  <button class="mapBtn inactive" data-text="mapRust">Rust – Yakında</button>
-  <button class="mapBtn inactive" data-text="mapZone">Zone 7 – Yakında</button>
-  <hr>
-  <h4 data-text="themesTitle">Nitro Temalar</h4>
-  <button class="themeBtn red" data-theme="red">Kırmızı Nitro</button>
-  <button class="themeBtn blue" data-theme="blue">Mavi Nitro</button>
-  <button class="themeBtn green" data-theme="green">Yeşil Nitro</button>
-  <hr>
-  <h4 data-text="filterTitle">Noktalar</h4>
-  <button onclick="filterPoints('flash')" data-text="flash">Flash</button>
-  <button onclick="filterPoints('molly')" data-text="molly">Molly</button>
-  <button onclick="filterPoints('smoke')" data-text="smoke">Smoke</button>
-  <button onclick="filterPoints('grenade')" data-text="grenade">Grenade</button>
-  <button onclick="filterPoints('all')" data-text="allPoints">Hepsi</button>
-  <button class="closeMenu" id="closeMenu" data-text="close">Kapat</button>
-</div>
-
-<!-- TUTORIAL -->
-<div class="tutorial" id="tutorial">
-  <div class="tutorial-card">
-    <h3 data-text="tutorialTitle">Nasıl Kullanılır?</h3>
-    <p id="tutorialText">
-      1. Noktalara tıklayın.<br>
-      2. Video otomatik açılır.<br>
-      3. Popup’u kapatmak için çarpıya tıklayın.<br>
-      4. Menüden temayı ve filtreleri değiştirebilirsiniz.<br>
-      5. Reklam duvarlarına tıklarsanız TikTok hesabına yönlendirilirsiniz.
-    </p>
-    <button id="closeTutorial" data-text="gotIt">Tamam</button>
-  </div>
-</div>
-
-<!-- ALT TEMA SEÇİMİ -->
-<div class="theme-bar">
-  <button id="lightThemeBtn">Beyaz Tema</button>
-  <button id="darkThemeBtn" class="dark">Siyah Tema</button>
+<!-- TEMA -->
+<div id="themeSwitch">
+  🌙 Siyah Tema · ⭐ Beyaz Tema
 </div>
 
 <script src="app.js"></script>
