--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Overlay Map</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Standoff 2 – Lineup</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div id="overlay"></div>
-
-<div id="map"></div>
-
-<!-- OYUN HUD MENÜ -->
-<div id="ui">
-  <div class="ui-btn" id="lockBtn">🔒 Kilitle</div>
-  <div class="ui-btn" id="clearBtn">🧹 Temizle</div>
+<!-- ÜST BAR -->
+<div class="top-bar">
+  <span>Sandstone</span>
+  <div class="filters">
+    <button data-type="smoke">Smoke</button>
+    <button data-type="flash">Flash</button>
+    <button data-type="molly">Molly</button>
+    <button data-type="grenade">Grenade</button>
+  </div>
 </div>
 
-<!-- TEMA -->
-<div id="themeSwitch">
-  🌙 Siyah Tema · ⭐ Beyaz Tema
+<!-- MAP -->
+<div class="map-container">
+  <img src="sandstone.jpg" class="map" alt="Sandstone">
+
+  <!-- N O K T A L A R -->
+  <div class="point smoke" style="top:40%;left:55%" data-video="https://www.youtube.com/embed/dQw4w9WgXcQ"></div>
+  <div class="point flash" style="top:60%;left:45%" data-video="https://www.youtube.com/embed/dQw4w9WgXcQ"></div>
+  <div class="point molly" style="top:50%;left:30%" data-video="https://www.youtube.com/embed/dQw4w9WgXcQ"></div>
+  <div class="point grenade" style="top:35%;left:65%" data-video="https://www.youtube.com/embed/dQw4w9WgXcQ"></div>
+</div>
+
+<!-- POPUP -->
+<div id="popup">
+  <iframe id="video" allowfullscreen></iframe>
+  <button onclick="closePopup()">Kapat</button>
 </div>
 
 <script src="app.js"></script>
