--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <title>Standoff 2 – Lineup</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sandstone Lineup</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="theme-dark">
+
+<!-- REKLAM DUVARLARI -->
+<a class="ad-wall left" href="https://www.tiktok.com/@solixx144" target="_blank"></a>
+<a class="ad-wall right" href="https://www.tiktok.com/@solixx144" target="_blank"></a>
 
 <!-- ÜST BAR -->
-<div class="top-bar">
-  <span>Sandstone</span>
-  <div class="filters">
-    <button data-type="smoke">Smoke</button>
-    <button data-type="flash">Flash</button>
-    <button data-type="molly">Molly</button>
-    <button data-type="grenade">Grenade</button>
+<header class="top-bar">
+  <button id="menuBtn">☰</button>
+  <div class="theme-switch">
+    <button id="lightBtn">☀</button>
+    <button id="darkBtn">🌙</button>
   </div>
-</div>
+</header>
+
+<!-- MENÜ -->
+<nav id="sideMenu" class="hidden">
+  <button onclick="setType('smoke')">Smoke</button>
+  <button onclick="setType('flash')">Flash</button>
+  <button onclick="setType('molly')">Molly</button>
+  <button onclick="setType('grenade')">Grenade</button>
+  <button onclick="clearPoints()">Temizle</button>
+</nav>
 
 <!-- MAP -->
-<div class="map-container">
-  <img src="sandstone.jpg" class="map" alt="Sandstone">
+<main class="map-area">
+  <img src="map.png" id="map" />
+  <div id="points"></div>
+</main>
 
-  <!-- N O K T A L A R -->
-  <div class="point smoke" style="top:40%;left:55%" data-video="https://www.youtube.com/embed/dQw4w9WgXcQ"></div>
-  <div class="point flash" style="top:60%;left:45%" data-video="https://www.youtube.com/embed/dQw4w9WgXcQ"></div>
-  <div class="point molly" style="top:50%;left:30%" data-video="https://www.youtube.com/embed/dQw4w9WgXcQ"></div>
-  <div class="point grenade" style="top:35%;left:65%" data-video="https://www.youtube.com/embed/dQw4w9WgXcQ"></div>
-</div>
-
-<!-- POPUP -->
-<div id="popup">
-  <iframe id="video" allowfullscreen></iframe>
-  <button onclick="closePopup()">Kapat</button>
+<!-- VIDEO POPUP -->
+<div id="videoPopup" class="hidden">
+  <div class="popup-inner">
+    <button onclick="closeVideo()">✖</button>
+    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+  </div>
 </div>
 
 <script src="app.js"></script>
