--- a/admin.html
+++ b/admin.html
@@ -1,32 +1,8 @@
 <!DOCTYPE html>
-<html lang="tr">
-<head>
-<meta charset="UTF-8">
-<title>Admin – Nokta Düzenleme</title>
-<style>
-body { background:#111; color:white; }
-.point { position:absolute; width:20px;height:20px;border-radius:50%;cursor:move; }
-</style>
-</head>
-<body>
-
-<h3>Admin – Noktaları Sürükle</h3>
-
-<div class="point" style="background:red;top:40%;left:50%"></div>
-
-<script>
-const point = document.querySelector('.point');
-let drag=false;
-
-point.onmousedown = ()=>drag=true;
-document.onmouseup = ()=>drag=false;
-document.onmousemove = e=>{
-  if(drag){
-    point.style.left = e.clientX+'px';
-    point.style.top = e.clientY+'px';
-    // burada kaydedip ana siteye aktaracaksın (ileride)
-  }
-};
-</script>
+<html>
+<body style="background:#000;color:#fff;font-family:Arial">
+<h2>Admin Panel (Geçici)</h2>
+<p>Bu panel sadece noktaları sürükleyip yerlerini ayarlamak içindir.</p>
+<p>Sonra sileceksin.</p>
 </body>
 </html>
