--- a/admin.html
+++ b/admin.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
-<body style="background:#000;color:#fff;font-family:Arial">
-<h2>Admin Panel (Geçici)</h2>
-<p>Bu panel sadece noktaları sürükleyip yerlerini ayarlamak içindir.</p>
-<p>Sonra sileceksin.</p>
+<html lang="tr">
+<head>
+<meta charset="UTF-8">
+<title>Admin Panel</title>
+<style>
+body{background:#111;color:#fff}
+.dot{width:18px;height:18px;border-radius:50%;background:red;position:absolute}
+</style>
+</head>
+<body>
+<h2>ADMIN – Nokta Test</h2>
+<p>Bu dosyayı işin bitince SİL</p>
 </body>
 </html>
